--- a/DevStars.html
+++ b/DevStars.html
@@ -3,13 +3,17 @@
     <head>
         <meta charset="utf-8" />
         <title>DevStars!</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="public/css/header.css" />
+        <link rel="stylesheet" href="public/css/devaria.css" />
     </head>
     <body>
         <header>
-            <h1>Ranking DevStars</h1>
-            <nav>
+            <a href="index.html" class="link-logo">
+                <img src="public/fotos/logo-devaria.svg" alt="Logo devaria" />
+            </a>
+            <nav class="menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
                     <li><a href="Professores.html">Professores</a></li>
                     <li><a href="FaleConosco.html">Fale Conosco</a></li>
                     <li><a href="DevStars.html">DevStars</a></li>
@@ -17,6 +21,7 @@
             </nav>
         </header>
         <main>
+            <h1>Ranking DevStars</h1>
             <h2>Como funciona os pontos Devstar?</h2>
             <section>
             <h3>Pontos recebidos através de desafios</h3>
