--- a/Professores.html
+++ b/Professores.html
@@ -3,13 +3,17 @@
     <head>
         <title>Professores Devaria</title>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="public/css/header.css" />
+        <link rel="stylesheet" href="public/css/devaria.css" />
     </head>
     <body>
         <header>
-            <h1>Professores Devaria</h1>
-            <na>
+            <a href="index.html" class="link-logo">
+                <img src="public/fotos/logo-devaria.svg" alt="Logo devaria" />
+            </a>
+            <nav class="menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
                     <li><a href="Professores.html">Professores</a></li>
                     <li><a href="FaleConosco.html">Fale Conosco</a></li>
                     <li><a href="DevStars.html">DevStars</a></li>
@@ -17,6 +21,8 @@
             </na>
         </header>
         <main>
+            <h1>Professores Devaria</h1>
+
             <section>
                 <div>
                     <img src="Fotos/fotoprofessores.png" width="500" alt="Professores Devaria" />
