--- a/index.html
+++ b/index.html
@@ -6,39 +6,30 @@
         <meta name="keywords" content="devaria, programação, aulas ao vivo, desenvolvimento de sistemas"/>
         <meta name="author" content="Daniela Castello"/>
         <meta http-equiv="Refresh" content="300"/>
-        <link rel="stylesheet" href="" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="public/css/header.css" />
+        <link rel="stylesheet" href="public/css/devaria.css" />
+        <link rel="stylesheet" href="public/css/index.css" />
         <title>Olá Mundo!</title>
-
-        <style>
-            .color-red {
-                color: red;
-            }
-
-            .color-red ul li a {
-                color: green;
-            }
-
-            #link-home {
-                color: black;
-            }
-        </style>
     </head>
     <body>
         <header>
-            <h1 class="color-red"> Olá Mundo! Essa é a minha primeira página da WEB.</h1>
-            <nav class="color-red">
+            <a href="index.html" class="link-logo">
+                <img src="public/fotos/logo-devaria.svg" alt="Logo devaria" />
+            </a>
+            <nav class="menu">
                 <ul>
-                    <li><a href="index.html" id="link-home">Home</a></li>
-                    <li><a href="Professores.html" id="link-home">Professores</a></li>
-                    <li><a href="FaleConosco.html" id="link-home">Fale Conosco</a></li>
-                    <li><a href="DevStars.html" id="link-home">DevStars</a></li>
+                    <li><a href="Professores.html">Professores</a></li>
+                    <li><a href="FaleConosco.html">Fale Conosco</a></li>
+                    <li><a href="DevStars.html">DevStars</a></li>
                 </ul>
             </nav>
         </header>
          <main>
-             <section>
+            <h1 class="title"> Olá Mundo! Essa é a minha primeira página da WEB.</h1>
+             <section class="cover-container">
             <figure>
-                <img src="Fotos/fotohome.png" width="500" alt="Devaria Olá Mundo"/>
+                <img src="public/fotos/fotohome.png" alt="Devaria Olá Mundo"/>
                 <figcaption>Foto de capa Devaria!</figcaption>
             </figure>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/PRMcdROXsGQ" title="Apresentação" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
