home, página professores e fale conosco

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <meta name="author" content="Daniela Castello"/>
         <meta http-equiv="Refresh" content="300"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="public/css/header.css" />
         <link rel="stylesheet" href="public/css/devaria.css" />
+        <link rel="stylesheet" href="public/css/footer.css" />
+        <link rel="stylesheet" href="public/css/header.css" />
         <link rel="stylesheet" href="public/css/index.css" />
         <title>Olá Mundo!</title>
     </head>
@@ -25,19 +26,17 @@
                 </ul>
             </nav>
         </header>
-         <main>
+         <main class="text-center">
             <h1 class="title"> Olá Mundo! Essa é a minha primeira página da WEB.</h1>
              <section class="cover-container">
             <figure>
                 <img src="public/fotos/fotohome.png" alt="Devaria Olá Mundo"/>
                 <figcaption>Foto de capa Devaria!</figcaption>
             </figure>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PRMcdROXsGQ" title="Apresentação" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
             </section>
-            <section>
-                <h3>Para que os <abbr title="Developers">DEVs</abbr> fiquem sabendo, utilizamos <abbr title="Microsoft Azure">MS Azure</abbr></h3>
-                <blockquote cite="https://azure.microsoft.com/pt-br/solutions">Resolva os problemas de negócios com as combinações comprovadamente eficientes de produtos e serviços do Azure. Introdução à documentação e às arquiteturas de exemplo.</blockquote>
+            <section class="section-azure">
+                <h3 class="title">Para que os <abbr title="Developers">DEVs</abbr> fiquem sabendo, utilizamos <abbr title="Microsoft Azure">MS Azure</abbr></h3>
+                <blockquote class="text-justify" cite="https://azure.microsoft.com/pt-br/solutions">Resolva os problemas de negócios com as combinações comprovadamente eficientes de produtos e serviços do Azure. Introdução à documentação e às arquiteturas de exemplo.</blockquote>
             </section>
         </main>
         <footer>
