--- a/DevStars.html
+++ b/DevStars.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8" />
         <title>DevStars!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="public/css/header.css" />
         <link rel="stylesheet" href="public/css/devaria.css" />
+        <link rel="stylesheet" href="public/css/header.css" />
+        <link rel="stylesheet" href="public/css/footer.css" />
     </head>
     <body>
         <header>
