--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8" />
         <title>Fale Conosco!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="public/css/header.css" />
         <link rel="stylesheet" href="public/css/devaria.css" />
+        <link rel="stylesheet" href="public/css/header.css" />
+        <link rel="stylesheet" href="public/css/footer.css" />
+        <link rel="stylesheet" href="public/css/FaleConosco.css" />
     </head>
     <body>
         <header>
@@ -21,25 +23,25 @@
             </nav>
         </header>
         <main>
-            <h1>Fale com a devaria através dessa pégina</h1>
-            <h2>Para entrar em contato preencha os campos abaixo e clique em enviar</h2>
-            <form action="index.html">
-                <p>
+            <h1 class="title text-center">Fale com a devaria através dessa pégina</h1>
+            <h2 class="sub-title text-center">Para entrar em contato preencha os campos abaixo e clique em enviar</h2>
+            <form action="index.html" class="contact-form margin-horizontal-20-px">
+                <div>
                     <label>Nome:</label><input type="text" name="Nome" maxlength="70" />
-                </p>
-                <p>
+                </div>
+                <div>
                     <label>E-mail:</label><input type="text" name="Email" maxlength="150" />
-                </p>
-                <p>
+                </div>
+                <div>
                     <label>Comentários:</label>
                     <textarea name="Comentario" cols="50" rows="4"></textarea>
-                </p>
-                <p>
+                </div>
+                <div>
                     <label>Sexo:</label>
-                    <input type="radio" name="Sexo"/><label>Feminino</label>
-                    <input type="radio" name="Sexo"/><label>Masculino</label>
-                </p>
-                <p>
+                    <input type="radio" name="Sexo"/><span>Feminino</span>
+                    <input type="radio" name="Sexo"/><span>Masculino</span>
+                </div>
+                <div>
                     <label>Aonde você conheceu a Devaria?</label>
                     <select name="Conheceu">
                         <option selected>Youtube</option>
@@ -47,15 +49,15 @@
                         <option>Google</option>
                         <option>Outros</option>
                     </select>
-                </p>
-                <p>
+                </div>
+                <div>
                     <input type="checkbox" name="Aceite" value="Aceite" />
-                    <label>Aceito receber novidades da Devaria</label>
-                </p>
-                <p>
+                    <span>Aceito receber novidades da Devaria</span>
+                </div>
+                <div>
                     <input type="submit" name="Enviar" value="Enviar" />
                     <input type="reset" name="Limpar" value="Limpar" />
-                </p>
+                </div>
             </form>        
         </main>
         <footer>
