--- a/Professores.html
+++ b/Professores.html
@@ -4,8 +4,10 @@
         <title>Professores Devaria</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="public/css/header.css" />
         <link rel="stylesheet" href="public/css/devaria.css" />
+        <link rel="stylesheet" href="public/css/footer.css" />
+        <link rel="stylesheet" href="public/css/header.css" />
+        <link rel="stylesheet" href="public/css/professores.css" />
     </head>
     <body>
         <header>
@@ -21,18 +23,17 @@
             </na>
         </header>
         <main>
-            <h1>Professores Devaria</h1>
-
-            <section>
-                <div>
-                    <img src="Fotos/fotoprofessores.png" width="500" alt="Professores Devaria" />
+            <h1 class="title text-center">Professores Devaria</h1>
+            <section class="content-container">
+                <div class="text-center">
+                    <img class="w-50pct-desktop" src="public/fotos/fotoprofessores.png" alt="Professores Devaria" />
                 </div>
                 <article>
-                    <h2>Dani e Rafa</h2>
-                    <p>
+                    <h2 class="title text-center">Dani e Rafa</h2>
+                    <p class="text-justify w-50pct-desktop">
                         Os professores são especialistas em <strong>desenvolvimento de sistemas</strong> e possuem mais de <em>10 anos de experiência</em>.
                     </p>
-                    <p>
+                    <p class="text-justify w-50pct-desktop">
                         Todas as aulas de Back e Front serão conduzidas mais pelo Rafa, Do e Fi, e as aulas mais de gestão e operações ficaram com o Dani. 
                     </p>
                 </article>
